# X-Cache

./: .ensime  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .history  .tags1  .tags_swap  1.txt  CMakeLists.txt  LICENSE  Makefile  README.md  build.sbt  example  goto_chisel.sh  grep  programmableCache.vcd  run.py  scalastyle-config.xml  setup.py
.circleci/: config.yml
RTL/: compile_all.sh
RTL/bbgemmTop/: bbgemmTop.v
RTL/bbgemmTop/bbgemmTop-10AS016E4F29E3LG/: build.sh  resources.tcl  top.qsf  top.qsf.a10  virtual_pins.tcl
RTL/bbgemmTop/bbgemmTop-10AS016E4F29E3LG/db/: top.(0).cnf.cdb  top.(0).cnf.hdb  top.(1).cnf.cdb  top.(1).cnf.hdb  top.(10).cnf.cdb  top.(10).cnf.hdb  top.(11).cnf.cdb  top.(11).cnf.hdb  top.(12).cnf.cdb  top.(12).cnf.hdb  top.(13).cnf.cdb  top.(13).cnf.hdb  top.(14).cnf.cdb  top.(14).cnf.hdb  top.(15).cnf.cdb  top.(15).cnf.hdb  top.(16).cnf.cdb  top.(16).cnf.hdb  top.(17).cnf.cdb  top.(17).cnf.hdb  top.(18).cnf.cdb  top.(18).cnf.hdb  top.(19).cnf.cdb  top.(19).cnf.hdb  top.(2).cnf.cdb  top.(2).cnf.hdb  top.(20).cnf.cdb  top.(20).cnf.hdb  top.(21).cnf.cdb  top.(21).cnf.hdb  top.(22).cnf.cdb  top.(22).cnf.hdb  top.(23).cnf.cdb  top.(23).cnf.hdb  top.(24).cnf.cdb  top.(24).cnf.hdb  top.(25).cnf.cdb  top.(25).cnf.hdb  top.(26).cnf.cdb  top.(26).cnf.hdb  (+137 more)
RTL/bbgemmTop/bbgemmTop-10AS016E4F29E3LG/output_files/: top.flow.rpt  top.map.rpt  top.map.summary
debug_chisel/Machsuite/: common.mk
debug_chisel/Machsuite/fft/strided/: cfg.check_data.dot  cfg.data_to_input.dot  cfg.data_to_output.dot  cfg.fd_printf.dot  cfg.fft.dot  cfg.find_section_start.dot  cfg.fstat.dot  cfg.input_to_data.dot  cfg.main.dot  cfg.output_to_data.dot  cfg.parse_double_array.dot  cfg.parse_float_array.dot  cfg.parse_int16_t_array.dot  cfg.parse_int32_t_array.dot  cfg.parse_int64_t_array.dot  cfg.parse_int8_t_array.dot  cfg.parse_string.dot  cfg.parse_uint16_t_array.dot  cfg.parse_uint32_t_array.dot  cfg.parse_uint64_t_array.dot  cfg.parse_uint8_t_array.dot  cfg.readfile.dot  cfg.run_benchmark.dot  cfg.write_double_array.dot  cfg.write_float_array.dot  cfg.write_int16_t_array.dot  cfg.write_int32_t_array.dot  cfg.write_int64_t_array.dot  cfg.write_string.dot  (+11 more)
debug_chisel/Machsuite/gemm/: bbgemm.final.bc  bbgemm.final.nodebug.bc  bbgemm.muir.json  bbgemm.scala  bbgemm_root.scala  cfg.bbgemm.dot  cfg.check_data.dot  cfg.data_to_input.dot  cfg.data_to_output.dot  cfg.fd_printf.dot  cfg.find_section_start.dot  cfg.fstat.dot  cfg.input_to_data.dot  cfg.main.dot  cfg.output_to_data.dot  cfg.parse_double_array.dot  cfg.parse_float_array.dot  cfg.parse_int16_t_array.dot  cfg.parse_int32_t_array.dot  cfg.parse_int64_t_array.dot  cfg.parse_int8_t_array.dot  cfg.parse_string.dot  cfg.parse_uint16_t_array.dot  cfg.parse_uint32_t_array.dot  cfg.parse_uint64_t_array.dot  cfg.parse_uint8_t_array.dot  cfg.readfile.dot  cfg.run_benchmark.dot  cfg.write_double_array.dot  cfg.write_float_array.dot  cfg.write_int16_t_array.dot  cfg.write_int32_t_array.dot  cfg.write_int64_t_array.dot  cfg.write_int8_t_array.dot  cfg.write_section_header.dot  cfg.write_string.dot  cfg.write_uint16_t_array.dot  cfg.write_uint32_t_array.dot  cfg.write_uint64_t_array.dot  cfg.write_uint8_t_array.dot
debug_chisel/conv2d/: conv2d.scala  conv2d_root.scala
debug_chisel/relu/: relu.scala  relu_root.scala
debug_chisel/saxpy/: saxpy.scala  saxpy_root.scala
debug_chisel/stencil/: stencil.scala  stencil_root.scala
debug_chisel/vadd/: vadd.scala  vadd_root.scala
doc/: Control-flow.md  Instruction  Nested-loop.md  Node.md  Parallel-loop.md  Soc-Interface.md  debugging.md  test-fit.md
doc/figures/: Handshaking.graffle
examples/: accel_config.json  bbgemm_config.json  conv2dUnroll_config.json  conv2d_config.json  fft_strided_config.json  memGenTest.json  relu_config.json  saxpy_config.json  spmv_crs_config.json  stencil_config.json  test01_config.json  test02_config.json  test03_config.json  test04_config.json  test05_config.json  test06_config.json  test07_config.json  test08_config.json  test09_config.json  test10_config.json  test11_config.json  test12_config.json  test13_config.json  test14_config.json  test15_config.json  test16_config.json  viterbi_config.json
hardware/chisel/: Makefile  build.sbt
hardware/chisel/project/: build.properties  plugins.sbt
hardware/dpi/: tsim_device.cc
hardware/verilog/: Makefile
include/: darray.h
include/dpi/: DPImodule.h  module.h  tsim.h
include/runtime/: object.h
include/vta/: DPImodule.h  tsim.h
patch/: chisel3.2-patch.diff
project/: plugins.sbt
python/: common.py  conv2d.py  memGenAccel.py  relu.py  saxpy.py  stencil.py  test01.py  test02.py  test03.py  test04.py  test05.py  test06.py  test07.py  test08.py  test09.py  test10.py  test11.py  test12.py  test13.py  test14.py  test15.py  test16.py  vtatest.py
python/Machsuite/fft/: datax.data  fftStrided.py  log
python/Machsuite/gemm/: bbgemm.py
python/Machsuite/spmv/: chck_round.data  cs.data  output.data  res_round.data  spmvCRS.py
python/Machsuite/viterbi/: viterbi.py
scripts/: TypeStackFile.py  extract_activity.py  extract_trace.py  log_example.txt  make_quartus_prj.sh  refactor.py
scripts/31upgrade/: refactor.py
scripts/Output16b/: Out_2_2_2_low  TypeStackFile_2_2_2_low.v  TypeStackFile_2_2_2_low.vcd
scripts/quartus_template/: top.qpf  top.qsf  top.qsf.cv  top.sdc
scripts/scala_test_template/: scala_templater.py  scala_test_template.scala
software/: CMakeLists.txt
software/src/: c_runtime_api.cc  file_util.cc  module.cc  registry.cc  runtime_module.cc  virtual_memory.cc
src/: .driver.cc.swp  down_sample_driver_main.cc  driver.cc  driver_conv_layer.cc  driver_main.cc  driver_main_test.cc  driver_strided_conv.cc  driver_test09.cc  driver_up_sample.cc
src/dpi/: module.cc
src/halide_driver/: driver_conv.cc  driver_conv_3_3.cc
src/main/scala/: Misc.scala  package.scala
src/vmem/: virtual_memory.cc  virtual_memory.h
test/c/: 01-sample.bc  01-sample.c  01-sample.ll  02-alloca.cpp
test/ll/: .01-sample.ll.swp
tests/python/: chisel_accel.py  test03_accel.py  test14_accel.py
(+723 files in other folders)
